# cc_game

./: .gitignore  CMakeLists.txt  README.md
cmake-modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
src/: GameClass.cxx  GameClass.hxx  main.cxx
